--- a/ShobarDokanBackoffice/src/main/resources/templates/home/index.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/home/index.html
@@ -192,7 +192,7 @@
                 <div class="card-header">
                     <i class="fas fa-chart-area"></i>
                     <span sec:authentication="name"></span> |
-                    Roles: <span sec:authentication="principal.authorities"></span> |
+                    Roles: <span></span>
                     <!--Area Chart Example</div>-->
                 <div class="card-body">
                     <canvas id="myAreaChart" width="100%" height="30"></canvas>
