--- a/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
@@ -39,6 +39,12 @@
                 </div>
             </div>
             <form th:action="@{/login}" method="post" id="formSubmit">
+                <div
+                        class="fb-like"
+                        data-share="true"
+                        data-width="450"
+                        data-show-faces="true">
+                </div>
                 <div class="form-group">
                     <div class="form-label-group">
                         <input type="text" id="inputUserName" name="username" class="form-control" placeholder="UserName" required="required" autocomplete="off" autofocus="autofocus"/>
@@ -61,6 +67,29 @@
                 </div>
                 <a href="javascript:void(0)" onclick="document.getElementById('formSubmit').submit();" class="btn btn-primary btn-block" >Login</a>
             </form>
+
+            <div class="form group">
+                <form th:action="@{/signin/facebook}" method="POST">
+                    <input type="hidden" name="scope" value="public_profile" />
+                    <input type="submit" class="btn btn-primary btn-block" value="Login using Facebook"/>
+                </form>
+            </div>
+            <!--<div class="fb-login-button" data-width="358" scope="public_profile,email"
+                 onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with"
+                 data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">
+            </div>
+            <div id="fb-root">
+
+            </div>
+            <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=567782503639906&autoLogAppEvents=1';
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));</script>
+-->
+
             <div class="text-center">
                 <a class="d-block small mt-3" th:href="@{/register}">Register an Account</a>
                 <a class="d-block small" th:href="@{/forgetPassword}">Forgot Password?</a>
@@ -76,6 +105,26 @@
 <!-- Core plugin JavaScript-->
 <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
 
+<script>
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId            : '567782503639906',
+            autoLogAppEvents : true,
+            xfbml            : true,
+            version          : 'v3.1'
+        });
+    };
+
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+
 </body>
 
 </html>
+
