--- a/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
@@ -65,30 +65,17 @@
                         </label>
                     </div>
                 </div>
-                <a href="javascript:void(0)" onclick="document.getElementById('formSubmit').submit();" class="btn btn-primary btn-block" >Login</a>
+                <div class="form-group">
+                    <a href="javascript:void(0)" onclick="document.getElementById('formSubmit').submit();" class="btn btn-primary btn-block" >Login</a>
+                </div>
             </form>
 
-            <div class="form group">
+            <div class="form-group">
                 <form th:action="@{/signin/facebook}" method="POST">
                     <input type="hidden" name="scope" value="public_profile" />
                     <input type="submit" class="btn btn-primary btn-block" value="Login using Facebook"/>
                 </form>
             </div>
-            <!--<div class="fb-login-button" data-width="358" scope="public_profile,email"
-                 onlogin="checkLoginState();" data-max-rows="1" data-size="large" data-button-type="continue_with"
-                 data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false">
-            </div>
-            <div id="fb-root">
-
-            </div>
-            <script>(function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) return;
-                js = d.createElement(s); js.id = id;
-                js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.1&appId=567782503639906&autoLogAppEvents=1';
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));</script>
--->
 
             <div class="text-center">
                 <a class="d-block small mt-3" th:href="@{/register}">Register an Account</a>
@@ -104,25 +91,6 @@
 
 <!-- Core plugin JavaScript-->
 <script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-<script>
-    window.fbAsyncInit = function() {
-        FB.init({
-            appId            : '567782503639906',
-            autoLogAppEvents : true,
-            xfbml            : true,
-            version          : 'v3.1'
-        });
-    };
-
-    (function(d, s, id){
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) {return;}
-        js = d.createElement(s); js.id = id;
-        js.src = "https://connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-</script>
 
 </body>
 
