--- a/ShobarDokanBackoffice/src/main/resources/templates/home/dashboard.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/home/dashboard.html
@@ -2,7 +2,7 @@
 <HTML xmlns="http://www.w3.org/1999/xhtml"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      layout:decorate="~{base}">
+      layout:decorate="~{admin_panel_base}">
 <div layout:fragment="page_content">
     <div class="container-fluid">
         <!-- Breadcrumbs-->
