--- a/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/login/login.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE HTML>
+<HTML xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:th="http://www.w3.org/1999/xhtml"
+      layout:decorate="~{home_page_base}">
 
-<head>
-
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-
-    <title>SB Admin - Login</title>
-
-    <!-- Bootstrap core CSS-->
-    <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-
-    <!-- Custom fonts for this template-->
-    <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css"/>
-
-    <!-- Custom styles for this template-->
-    <link th:href="@{css/sb-admin.css}" rel="stylesheet"/>
-
-</head>
-
-<body class="bg-dark">
-
-<div class="container">
+<div layout:fragment="page_content">
     <div class="card card-login mx-auto mt-5">
         <div class="card-header">Login</div>
         <div class="card-body">
@@ -47,13 +27,15 @@
                 </div>
                 <div class="form-group">
                     <div class="form-label-group">
-                        <input type="text" id="inputUserName" name="username" class="form-control" placeholder="UserName" required="required" autocomplete="off" autofocus="autofocus"/>
+                        <input type="text" id="inputUserName" name="username" class="form-control"
+                               placeholder="UserName" required="required" autocomplete="off" autofocus="autofocus"/>
                         <label for="inputUserName">UserName</label>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="form-label-group">
-                        <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="required"/>
+                        <input type="password" id="inputPassword" name="password" class="form-control"
+                               placeholder="Password" required="required"/>
                         <label for="inputPassword">Password</label>
                     </div>
                 </div>
@@ -66,13 +48,14 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <a href="javascript:void(0)" onclick="document.getElementById('formSubmit').submit();" class="btn btn-primary btn-block" >Login</a>
+                    <a href="javascript:void(0)" onclick="document.getElementById('formSubmit').submit();"
+                       class="btn btn-primary btn-block">Login</a>
                 </div>
             </form>
 
             <div class="form-group">
                 <form th:action="@{/signin/facebook}" method="POST">
-                    <input type="hidden" name="scope" value="public_profile" />
+                    <input type="hidden" name="scope" value="public_profile"/>
                     <input type="submit" class="btn btn-primary btn-block" value="Login using Facebook"/>
                 </form>
             </div>
@@ -84,15 +67,3 @@
         </div>
     </div>
 </div>
-
-<!-- Bootstrap core JavaScript-->
-<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
-<!-- Core plugin JavaScript-->
-<script th:src="@{vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-</body>
-
-</html>
-
