duplicate entry removed

--- a/ShobarDokanBackoffice/src/main/resources/templates/fragments/left_sidebar.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/fragments/left_sidebar.html
@@ -12,7 +12,7 @@
                     <a href="#"><i class="fa fa-table fa-fw"></i>Products<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a th:href="@{@{/productDetailsList}}">Product Details List</a>
+                            <a th:href="@{/productDetailsList}">Product Details List</a>
                         </li>
                         <li>
                             <a th:href="@{/requestProduct/add}">Request Product</a>
