--- a/ShobarDokanBackoffice/src/main/resources/templates/register/register.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/register/register.html
@@ -1,62 +1,56 @@
 <!DOCTYPE HTML>
 <HTML xmlns="http://www.w3.org/1999/xhtml"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{home_page_base}">
 
 <div layout:fragment="page_content">
-    <div class="card card-register mx-auto mt-5">
-        <div class="card-header">Register an Account</div>
-        <div class="card-body">
-            <form>
-                <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
-                            <div class="form-label-group">
-                                <input type="text" id="firstName" class="form-control" placeholder="First name"
-                                       required="required" autofocus="autofocus"/>
-                                <label for="firstName">First name</label>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-label-group">
-                                <input type="text" id="lastName" class="form-control" placeholder="Last name"
-                                       required="required"/>
-                                <label for="lastName">Last name</label>
-                            </div>
-                        </div>
-                    </div>
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="login-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Please Register</h3>
                 </div>
-                <div class="form-group">
-                    <div class="form-label-group">
-                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address"
-                               required="required"/>
-                        <label for="inputEmail">Email address</label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
-                            <div class="form-label-group">
-                                <input type="password" id="inputPassword" class="form-control" placeholder="Password"
-                                       required="required"/>
-                                <label for="inputPassword">Password</label>
+                <div class="panel-body">
+                    <form class="form-group" th:action="@{/register}" id="register" th:method="post" modelAttribute="register" commandName="register">
+                        <fieldset>
+                            <div class="form-group">
+                                <input class="form-control" name="username"
+                                       placeholder="UserName" type="text" maxlength="30" required="required" autocomplete="off"
+                                       autofocus="autofocus">
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-label-group">
-                                <input type="password" id="confirmPassword" class="form-control"
-                                       placeholder="Confirm password" required="required"/>
-                                <label for="confirmPassword">Confirm password</label>
+                            <div class="form-group">
+                                <input class="form-control" name="phone"
+                                       placeholder="Phone" type="text" maxlength="11" required="required" autocomplete="off"
+                                       autofocus="autofocus">
                             </div>
-                        </div>
-                    </div>
+                            <div class="form-group">
+                                <input class="form-control" name="email"
+                                       placeholder="Email Address" type="text" maxlength="30" required="required" autocomplete="off"
+                                       autofocus="autofocus">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Password" name="password" type="password"
+                                       required="required" value="">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control" placeholder="Confirm Password" name="password_confirmation" type="password"
+                                       required="required" value="">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input name="remember" type="checkbox" value="Remember Me">Remember Me
+                                </label>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-md-6"><input  type="submit" value="Register" class="btn btn-success btn-block"/></div>
+                                <div class="col-xs-12 col-md-6"><a th:href="@{/login}" class="btn btn-primary btn-block">Login</a></div>
+                            </div>
+                        </fieldset>
+                    </form>
+
                 </div>
-                <a class="btn btn-primary btn-block" th:href="@{/register}">Register</a>
-            </form>
-            <div class="text-center">
-                <a class="d-block small mt-3" th:href="@{/login}">Login Page</a>
-                <a class="d-block small" th:href="@{/forgetPassword}">Forgot Password?</a>
+
             </div>
         </div>
     </div>
