--- a/ShobarDokanBackoffice/src/main/resources/templates/fragments/footer.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/fragments/footer.html
@@ -15,28 +15,28 @@
     </div>
 
     <!-- jQuery -->
-    <script th:src="@{vendor/jquery/jquery.min.js}"></script>
+    <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script th:src="@{vendor/bootstrap/js/bootstrap.min.js}"></script>
+    <script th:src="@{/vendor/bootstrap/js/bootstrap.min.js}"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script th:src="@{vendor/metisMenu/metisMenu.min.js}"></script>
+    <script th:src="@{/vendor/metisMenu/metisMenu.min.js}"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script th:src="@{vendor/raphael/raphael.min.js}"></script>
-    <script th:src="@{vendor/morrisjs/morris.min.js}"></script>
-    <script th:src="@{data/morris-data.js}"></script>
+    <script th:src="@{/vendor/raphael/raphael.min.js}"></script>
+    <script th:src="@{/vendor/morrisjs/morris.min.js}"></script>
+    <script th:src="@{/data/morris-data.js}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script th:src="@{dist/js/sb-admin-2.js}"></script>
+    <script th:src="@{/dist/js/sb-admin-2.js}"></script>
 
 
     <!--for list view in table-->
     <!-- DataTables JavaScript -->
-    <script src="../vendor/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-    <script src="../vendor/datatables-responsive/dataTables.responsive.js"></script>
+    <script th:src="@{/vendor/datatables/js/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/vendor/datatables-plugins/dataTables.bootstrap.min.js}"></script>
+    <script th:src="@{/vendor/datatables-responsive/dataTables.responsive.js}"></script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
     <script>
