--- a/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
@@ -1,67 +1,58 @@
 <!DOCTYPE HTML>
-<HTML xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<HTML xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{admin_panel_base}">
+
 <div layout:fragment="page_content">
-    <div class="container-fluid">
-
-        <!-- Breadcrumbs-->
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a href="#">Dashboard</a>
-            </li>
-            <li class="breadcrumb-item active">Request List</li>
-        </ol>
-
-        <div class="mb-3" id="fades">
-            <div class="span12">
-                <div th:if="${success != null}">
-                    <div class="alert alert-success">
-                        <strong th:text="${success}"></strong>
-                    </div>
-                </div>
-                <div th:if="${error != null}">
-                    <div class="alert alert-danger">
-                        <strong th:text="${error}"></strong>
-                    </div>
-                </div>
+    <div id="page-wrapper">
+        <div class="row">
+            <!-- /.col-lg-12 -->
+            <div class="col-lg-12">
+                <p>
+                <h1 class="navbar-left">Request List</h1>
+                <h1 class="navbar-right"><a href="add" class="btn btn-primary">Add</a></h1>
+                </p>
             </div>
+
         </div>
-
-        <div class="card mb-3">
-            <div class="card-header">
-                <i class="fas fa-table"></i>
-                My Request List
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th>SL</th>
-                            <th>Product URL</th>
-                            <th>Status</th>
-                            <th>Quantity</th>
-                            <!--<th>Created Date</th>-->
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="request,iterationStatus : ${requestedProductList}">
-                            <td th:text="${iterationStatus.count}">1</td>
-                            <td th:text="${request.productUrl}"></td>
-                            <td th:text="${request.status}"></td>
-                            <<td th:text="${request.quantity}"></td>
-                            <!--<td th:text="${request.createdAt}"></td>-->
-                        </tr>
-                        </tbody>
-                    </table>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Unchacked Requested Products
+                    </div>
+                    <!-- /.panel-heading -->
+                    <div class="panel-body">
+                        <table width="100%" class="table table-striped table-bordered table-hover"
+                               id="dataTables-example">
+                            <thead>
+                            <tr>
+                                <th>SL</th>
+                                <th>Product URL</th>
+                                <th>Status</th>
+                                <th>Quantity</th>
+                                <th>Created Date</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="request,iterationStatus : ${requestedProductList}">
+                                <td th:text="${iterationStatus.count}">1</td>
+                                <td th:text="${request.productUrl}"></td>
+                                <td th:text="${request.status}"></td>
+                                <td th:text="${request.quantity}"></td>
+                                <td th:text="${request.createdAt}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!-- /.table-responsive -->
+                    </div>
+                    <!-- /.panel-body -->
                 </div>
+                <!-- /.panel -->
             </div>
+            <!-- /.col-lg-12 -->
         </div>
 
     </div>
 </div>
 </HTML>
-<script>
-    $("#fades").fadeOut(8000, function() { $(this).remove(); });
-</script>
