--- a/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
@@ -5,7 +5,7 @@
 
 <div layout:fragment="page_content">
     <div id="page-wrapper">
-        <div class="row">
+        <div class="lg-3">
             <!-- /.col-lg-12 -->
             <div class="col-lg-12">
                 <p>
@@ -14,6 +14,20 @@
                 </p>
             </div>
 
+        </div>
+        <div class="mb-3" id="fades">
+            <div class="span12">
+                <div th:if="${success != null}">
+                    <div class="alert alert-success">
+                        <strong th:text="${success}"></strong>
+                    </div>
+                </div>
+                <div th:if="${error != null}">
+                    <div class="alert alert-danger">
+                        <strong th:text="${error}"></strong>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
