--- a/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_add.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_add.html
@@ -20,27 +20,38 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
-                                <form role="form" class="form-horizontal group-border hover-stripped"
+                                <form role="form" class="form-horizontal group-border hover-stripped" action="#" th:object="${userRequest}"
                                       th:action="@{/requestProduct/add}" th:method="POST" modelAttribute="add" commandName="add">
                                     <div class="form-group required">
                                         <label class="col-lg-2 col-md-2 col-sm-12 control-label">Product URL</label>
                                         <div class="col-lg-5 col-md-5 ui-sortable">
-                                            <input class="form-control" name="productUrl" placeholder="Product URL"/>
+                                            <input class="form-control" th:field="*{productUrl}" id="urlSource" placeholder="Product URL"/>
                                         </div>
+                                        <span th:if="${#fields.hasErrors('productUrl')}" th:errors="*{productUrl}"></span>
                                     </div>
+                                    <!--<div class="form-group required" id="urlLoad" >-->
+                                        <!--<div class="col-lg-5 col-md-5 ui-sortable">-->
+                                            <!--<iframe id="urlDisplay" th:src="${productUrl}">-->
+
+                                            <!--</iframe>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+
                                     <div class="form-group required">
                                         <label class="col-lg-2 col-md-2 col-sm-12 control-label">Quantity</label>
                                         <div class="col-lg-5 col-md-5 ui-sortable">
-                                            <input name="quantity" type="text"
+                                            <input th:field="*{quantity}" type="number"
                                                    class="form-control" placeholder="Quantity"/>
                                         </div>
+                                        <span th:if="${#fields.hasErrors('quantity')}" th:errors="*{quantity}"></span>
                                     </div>
                                     <div class="form-group required">
                                         <label class="col-lg-2 col-md-2 col-sm-12 control-label">Comments</label>
                                         <div class="col-lg-5 col-md-5 ui-sortable">
-                                            <textarea name="comments" type="text"
+                                            <textarea th:field="*{comments}" type="text"
                                                       class="form-control" placeholder="Comments Here"></textarea>
                                         </div>
+                                        <span th:if="${#fields.hasErrors('comments')}" th:errors="*{comments}"></span>
                                     </div>
                                     <div class="form-group">
                                         <label class="col-lg-2 col-md-2 col-sm-12 control-label"></label>
@@ -62,4 +73,16 @@
         <!-- /.row -->
     </div>
 </div>
+<script th:inline="javascript">
+
+    $("#urlSource").bind("change paste keyup", function() {
+        alert($(this).val());
+    });
+
+</script>
+<style>
+    td{
+        color: red;
+    }
+</style>
 </HTML>
