--- a/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/product_request/product_request_list.html
@@ -33,15 +33,15 @@
             <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        Unchacked Requested Products
+                        My Requested Products
                     </div>
-                    <!-- /.panel-heading -->
                     <div class="panel-body">
                         <table width="100%" class="table table-striped table-bordered table-hover"
                                id="dataTables-example">
                             <thead>
                             <tr>
                                 <th>SL</th>
+                                <th>User Name</th>
                                 <th>Product URL</th>
                                 <th>Status</th>
                                 <th>Quantity</th>
@@ -51,22 +51,19 @@
                             <tbody>
                             <tr th:each="request,iterationStatus : ${requestedProductList}">
                                 <td th:text="${iterationStatus.count}">1</td>
-                                <td th:text="${request.productUrl}"></td>
+                                <td th:text="${request.user.username}"></td>
+                                <td><a th:href="${request.productUrl}" target="_blank">
+                                    <span th:text="${request.productUrl}"></span></a></td>
                                 <td th:text="${request.status}"></td>
                                 <td th:text="${request.quantity}"></td>
                                 <td th:text="${request.createdAt}"></td>
                             </tr>
                             </tbody>
                         </table>
-                        <!-- /.table-responsive -->
                     </div>
-                    <!-- /.panel-body -->
                 </div>
-                <!-- /.panel -->
             </div>
-            <!-- /.col-lg-12 -->
         </div>
-
     </div>
 </div>
 </HTML>
