--- a/ShobarDokanBackoffice/src/main/resources/templates/productDetails/confirm_product_list.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/productDetails/confirm_product_list.html
@@ -52,7 +52,7 @@
                                 <td th:text="${iterationStatus.count}">1</td>
                                 <td th:text="${product.url}"></td>
                                 <td class="center">
-                                    <a th:href="@{editCheckedProduct(id=${product.id})}">
+                                    <a th:href="@{editConfirmedProduct(id=${product.id})}">
                                         <i class="fa fa-pencil-square-o"></i></a>
                                 </td>
                             </tr>
