--- a/ShobarDokanBackoffice/src/main/resources/templates/productDetails/requested_product_list.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/productDetails/requested_product_list.html
@@ -54,7 +54,7 @@
                                     <td th:text="${iterationStatus.count}">1</td>
                                     <td><a th:href="@{${request.productUrl}}" th:text="${request.productUrl}"
                                            target="_blank"/></td>
-                                    <td class="center"><a th:href="@{editUncheckedProduct(id=${request.id})}"><i
+                                    <td class="center"><a th:href="@{editRequestedProduct(id=${request.id})}"><i
                                             class="fa fa-pencil-square-o"></i></a></td>
                                 </a>
                             </tr>
