--- a/ShobarDokanBackoffice/src/main/resources/templates/fragments/left_sidebar.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/fragments/left_sidebar.html
@@ -12,10 +12,10 @@
                     <a href="#"><i class="fa fa-table fa-fw"></i>Products<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a th:href="@{/productDetails/unCheckedProductDetailsList}">Unchacked Product Details</a>
+                            <a th:href="@{/productDetails/requestedProductList}">Requested Product Details</a>
                         </li>
                         <li>
-                            <a th:href="@{/productDetails/checkedProductDetailsList}">Checked Product Details</a>
+                            <a th:href="@{/productDetails/confirmProductList}">Confirmed Product Details</a>
                         </li>
                         <li>
                             <a th:href="@{/requestProduct/add}">Request Product</a>
