--- a/ShobarDokanBackoffice/src/main/resources/templates/fragments/header.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,8 @@
 
     <title>Shobar Dokan</title>
 
+    <!--Custom css from sobar dokan-->
+    <link th:href="@{/custom/formvalidation.css}" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
     <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
