--- a/ShobarDokanBackoffice/src/main/resources/templates/fragments/header.html
+++ b/ShobarDokanBackoffice/src/main/resources/templates/fragments/header.html
@@ -15,6 +15,8 @@
     <!-- Bootstrap Core CSS -->
     <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
+    <!-- Social Buttons CSS -->
+    <link th:href="@{vendor/bootstrap-social/bootstrap-social.css}" rel="stylesheet">
     <!-- MetisMenu CSS -->
     <link th:href="@{/vendor/metisMenu/metisMenu.min.css}" rel="stylesheet">
     <!-- Custom CSS -->
@@ -35,6 +37,14 @@
 </th:block>
 
 <th:block th:fragment="navbar">
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=1934142040015390&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
